Ajustando pagina minha conta

--- a/oikonomos-dashboard/index.html
+++ b/oikonomos-dashboard/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="" href="/tridente.png" />
+    <link rel="icon" type="" href="/LogoApollo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oikonomos Finance</title>
+    <title>Apollo Ledger</title>
   </head>
   <body>
     <div id="root"></div>
