--- a/oikonomos-dashboard/index.html
+++ b/oikonomos-dashboard/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="" href="/LogoApollo.png" />
+    <link rel="icon" type="" href="/Logo_arpa_cores_fortes.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apollo Ledger</title>
   </head>
